fix: scroll while scrollbar hiding

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,17 +6,15 @@
   font-family: "Inter", sans-serif;
 
   /* Hide scrollbar for IE, Edge and Firefox */
-  /* -ms-overflow-style: none; */
+  -ms-overflow-style: none;
   /* IE and Edge */
-  /* scrollbar-width: none; */
+  scrollbar-width: none;
   /* Firefox */
 }
 
-/* *::-webkit-scrollbar {
+*::-webkit-scrollbar {
   display: none;
-} */
-
-/*hides the increment decrement buttons of input type=number  */
+}
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
